# vsc-plugin

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: librust.yml  publish.yml
lead/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  lead-0.0.1.vsix  package.json  pnpm-lock.yaml  vsc-extension-quickstart.md  web.js
lead/client/: package.json  pnpm-lock.yaml
lead/client/src/: extension.ts
lead/server/: package.json
lead/server/src/: getArch.ts  server.ts
lead/server/src/analyzer/: index.ts  map.ts  parser.ts  split.ts  var.ts
lead/syntaxes/: lead.tmLanguage.json
librust/: .gitignore  Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml  ver.cjs
librust/src/: lib.rs
librust/src/utils/: mod.rs
test/: index.pb  metadata.json
