[package]
name = "librust"
version = "1.0.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lead_lang_interpreter = { git = "https://github.com/leadlang/lead", version = "0.0.0-dev-lead-lang" }
libloading = "0.8"
neon = "1"
